--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,36 +8,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Poppins:wght@100&display=swap" rel="stylesheet">
-	<style>
-		.center-me {
-		margin: 0 auto;
-}
-
-		body {
-			background-color: ffeedf;
-			text-align: center;
-			display: flex;
-			position: relative;
-			justify-content: center;
-		}
-
-		button {
-			background-color: #1c5a4e;
-			width: 240px;
-			height: 240px;
-			border-radius: 50%;
-			font-size: 200px;
-			color: #ffeedf;
-			font-weight: light;
-			line-height: 0;
-			position: absolute;
-			margin-left: auto;
-			margin-right: auto;
-			font-family: 'Montserrat', sans-serif;
-			border: 0px;
-		}
-
-	</style>
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
 	<div id="root"></div>
