--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,9 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-	<div id="root"></div>
+	<div id="root">
 	<button type="button">A</button>
-	  
+	</div>
 </body>
 </html>
   
